--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
     "name": "tereta/framework.pattern",
+    "description": "Patterns of framework",
+    "license": "Apache-2.0",
+    "version": "0.0.19",
     "type": "library",
     "autoload": {
         "psr-4": {
